--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 
 dependencies:
   cupertino_icons: ^0.1.3
-  # easy_mask: ^0.0.1
+  easy_mask: ^0.0.3
   flutter:
     sdk: flutter
 
