--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,7 +11,8 @@ environment:
 
 dependencies:
   cupertino_icons: ^0.1.3
-  easy_mask: ^1.0.0
+  easy_mask: 
+    path: ../
   flutter:
     sdk: flutter
 
