--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,8 +11,7 @@ environment:
 
 dependencies:
   cupertino_icons: ^0.1.3
-  easy_mask: 
-    path: ../
+  easy_mask: ^1.1.0
   flutter:
     sdk: flutter
 
