--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: easy_mask
-version: 1.1.2
+version: 1.1.3
 
-description: Easy and Powerful Mask for TextField and Strings. Has multi mask support, reverse mask for currency and placeholder. It controls user's cursor.
+description: Easy and Powerful Mask for TextField, TextFormField and Strings. Has multi mask support, reverse mask for currency and placeholder. It controls user's cursor.
 homepage: https://github.com/danilocoppi/flutter-textfield-mask
 
 environment:
