--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,9 +11,9 @@ environment:
 
 dependencies:
   cupertino_icons: ^0.1.3
-  easy_mask: ^2.0.0
-  # easy_mask:
-  #     path: ../
+#  easy_mask: ^2.0.0
+  easy_mask:
+    path: ../
   flutter:
     sdk: flutter
 
